--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api,       roles: PUBLIC_ACCESS}
 
 when@test:
     security:
